# claude-code-conductor

./: .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  hatch_build.py  mkdocs.yml  pyproject.toml
.claude/: CLAUDE.md  breaking-changes.txt  deletions.txt  permission_rules.json  settings.json  settings.local.json
.claude/agents/: architect.md  code-reviewer.md  design-critic.md  developer.md  doc-writer.md  interviewer.md  planner.md  project-setup.md  security-reviewer.md  summarize-memory.md  systematic-debugger.md  tdd-develop.md  tester.md  wt_developer.md  wt_systematic-debugger.md  wt_tester.md
.claude/commands/: agent-architect.md  agent-code-reviewer.md  agent-developer.md  agent-interviewer.md  agent-planner.md  agent-security-reviewer.md  agent-tester.md  develop.md  init-session.md  promote-pattern.md  review.md  setup.md  start.md
.claude/docs/: autonomous-mode-onboarding.md  config-policy.md  decisions.md  game-studios-research.md  nul-boundary.md  parallel-agents-setup.md  parallel-orchestra-manifest.md  platform-adapters.md  po-worktree-writes.md  settings.json.md  taxonomy.md
.claude/hooks/: _hook_utils.py  check_agent_invocation.py  clear_file_history.py  consolidate_memory.py  enable_sandbox.py  init_c3_db.py  permission_handler.py  permission_handler_toast.py  planner_check.py  po_heartbeat.py  post_tool.py  pre_compact.py  pre_tool.py  recall_autorebuild.py  recall_inject.py  record_review_decision.py  record_tier_outcome.py  restore_session.py  review_hint_inject.py  schema.sql  select_tier.py  session_start.py  session_stop.py  session_utils.py  statusline.py  stop.py  subagent_log.py  task_session_sync.py  tier_autoapply.py  tier_gap_check.py  validate_skill_change.py  worktree_guard.py
.claude/rules/: code-review-checklist.md  plan-design-guidelines.md  security-review-checklist.md
.claude/skills/: dev-workflow.md  parallel-execution.md  wave-execution.md  worktree-tdd-workflow.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  macos-smoke.yml  publish.yml  test.yml
LICENSES/: chroma-hnswlib-LICENSE  chroma-hnswlib-NOTICE  fastembed-LICENSE  fastembed-NOTICE  numpy-LICENSE  onnxruntime-LICENSE  paraphrase-multilingual-MiniLM-L12-v2-LICENSE
docs/: cli-reference.md  getting-started.md  index.md  skills.md
scripts/: check_deletions.py  extract_breaking_changes.py
src/c3/: __init__.py  __main__.py  _db_params.py  _excludes.py  _terminal.py  adapters.py  cli.py  cli_ask.py  cli_doctor.py  cli_init.py  cli_list.py  cli_metrics.py  cli_plan.py  cli_po.py  cli_recall.py  cli_run.py  cli_status.py  cli_tier.py  cli_update.py  db.py  embedding.py  gitutil.py  mcp_server.py  migrate.py  paths.py  plan_validator.py  platforms.py  pricing.py  question.py  recall_chunker.py  recall_index.py  usage_ingester.py
src/parallel_orchestra/: __init__.py  c3_db.py  cli.py  manifest.py  report.py  run_state.py  runner.py
tests/: _pre_compact_helpers.py  conftest.py  test_adapters.py  test_check_deletions.py  test_clear_file_history.py  test_cli_ask.py  test_cli_doctor.py  test_cli_doctor_launcher.py  test_cli_entry.py  test_cli_init.py  test_cli_list.py  test_cli_metrics.py  test_cli_plan.py  test_cli_po.py  test_cli_po_tempfile.py  test_cli_recall.py  test_cli_run.py  test_cli_status.py  test_cli_tier.py  test_cli_update.py  test_cli_update_breaking_changes.py  test_cli_update_deletions.py  test_db.py  test_docstring_consistency.py  test_embedding.py  test_enable_sandbox.py  test_excludes.py  test_extract_breaking_changes.py  test_gitutil.py  test_manifest_fixes.py  test_manifest_yaml_escape.py  test_mcp_server_elicit.py  test_migrate.py  test_mode_line.py  test_no_bare_python_launcher.py  test_nul_boundary_lint.py  test_paths.py  test_plan_validator.py  test_po_detect.py  test_po_loose_coupling.py  (+26 more)
workflow-test/: conftest.py
workflow_test/: conftest.py
(+133 files in other folders)
