[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "claude-code-conductor"
dynamic = ["version"]
description = "Multi-agent orchestration framework for Claude Code (C3)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "satoh-y-0323" }
]
keywords = ["claude", "claude-code", "agents", "orchestration", "tdd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
dependencies = []

[project.scripts]
c3 = "c3.cli:main"

[project.urls]
Homepage = "https://github.com/satoh-y-0323/claude-code-conductor"
Repository = "https://github.com/satoh-y-0323/claude-code-conductor"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.version]
path = "src/c3/__init__.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/c3"]

[tool.hatch.build.targets.wheel.force-include]
"src/c3/_template" = "c3/_template"

[tool.hatch.build.targets.sdist]
include = [
    "src/c3",
    "hatch_build.py",
    ".claude",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]
exclude = [
    ".claude/reports/*",
    ".claude/memory/sessions/*",
    ".claude/memory/patterns.json",
    ".claude/memory/agent-audit.log",
    ".claude/tmp/*",
    ".claude/docs/decisions.md",
    ".claude/docs/taxonomy.md",
    ".claude/docs/game-studios-research.md",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
